tests/testcases/invalid/semantic/63_this_invalid_type_cast.ciel
// Error: Casting 'this' to incompatible type

class MyClass {
    public:
        int value;

        int* get_as_int_ptr() {
            return (int*)this;  // Error: Invalid cast of 'this' to int*
        }
};

int main() {
    class MyClass obj;
    int* ptr;
    obj.value = 42;
    ptr = obj.get_as_int_ptr();
    return *ptr;
}
